fixed image warping on mobile screens and project names inside package files

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 .img {
   height: 40px;
   width: 40px;
-  max-width: 5%;
+  max-width: 10%;
 }
 
 a {
